

Name: Segue Change Log



v. 2.0-beta-16 (2008-03-26)
----------------------------------------------------
This release fixes a little bug introduce in beta 15.
		
		
	* Bug Fix: 
		View: Now doesn't throw an error when viewing restricted sites while not
		logged in. Included a missing class.
		(2008-03-26 - Adam Franco)
		
	* New feature: #1926129 
		Migration: New action for reporting the existence of a site to a Segue 1
		instance. With Segue 1.9.1, this allows forwarding from a Segue 1 instance
		to the Segue 2 instance in addition to forwarding in the other direction
		(supported in 2.0-beta 15/1.9.0).
		(2008-03-26 - Adam Franco)
		
	* Bug Fix: 
		Migration: Now can accept Segue 1-style URLs to Segue 2 sites that were
		created in the Segue 2 instance and not imported.
		(2008-03-26 - Adam Franco)
		
	* New feature: #1820917 
		MediaLibrary: Quotas are now displayed in the media library and enforced by
		the upload actions.
		(2008-03-26 - Adam Franco)
	
v. 2.0-beta-15.1 (2008-03-25)
----------------------------------------------------
This release fixes a little bug introduce in beta 15.
		
		
	* Bug Fix: 
		SiteDisplay: Fixed cascading settings.
		(2008-03-25 - Adam Franco)
	
v. 2.0-beta-15 (2008-03-25)
----------------------------------------------------
The Segue 2.0 beta is capable of most of the site creation and editing needs of
users. We are continually adding features to bring Segue 2 up to feature parity with
Segue 1.x. See the Feature Request Tracker for a list of features that still need to
be completed: https://sourceforge.net/tracker/?group_id=82171&amp;atid=565237 This
release adds a number of major improvements as well as fixes a large number of bugs.
Notable user-facing changes: - Migration tools for importing Segue 1 sites - New
plugins for Breadcrumbs and RSS links - Improvements to UI2, 'New Mode' editing
interface to reduce visual clutter. - New Site-Map view. - New version of FCK
editor, now supports Safari.
