@@ -25,7 +25,9 @@
 <h1>Segue Change Log</h1>
 <h2>Version 2.0-beta-16</h2>
 <h3>2008-03-26</h3>
-<p>This release fixes a little bug introduce in beta 15.</p>
+<p>This release adds Media Library quotas and enables redirects from Segue 1 instances.
+<br>
+<br>Segue 2.0 beta 16 uses Polyphony 1.0.4 and Harmoni 1.0.5.</p>
 <ul>
 		
 		<li>
