@@ -6,7 +6,9 @@ Name: Segue Change Log
 
 v. 2.0-beta-16 (2008-03-26)
 ----------------------------------------------------
-This release fixes a little bug introduce in beta 15.
+This release adds Media Library quotas and enables redirects from Segue 1 instances.
+
+Segue 2.0 beta 16 uses Polyphony 1.0.4 and Harmoni 1.0.5.
 		
 		
 	* Bug Fix: 
